@@ -25,6 +25,7 @@
   * Add support for [[https://github.com/nextflow-io/language-server][Nextflow]]
   * Add TypeSpec support
   * Add Tree-sitter query support
+  * Add [[https://github.com/mrjosh/helm-ls][helm-ls]] (YAML Kubernetes Helm) support.
 
 ** 9.0.0
   * Add language server config for QML (Qt Modeling Language) using qmlls.
